Fix vote controls counter off center

--- a/src/components/voteControls/voteControls.scss
+++ b/src/components/voteControls/voteControls.scss
@@ -18,7 +18,7 @@
 
 	// container that has upvote/downvote btn and vote count inside
 	.votesContainer {
-		display: inline-block;
+		display: inline-flex;
 		margin-right: var(--padding-size-primary);
 		height: 42px;
 		padding: calc(var(--padding-size-primary) / 2);
